--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ ol, ul {
     list-style: none;
 }
 /* End of Reset */
+
 /* Start of Custom Styles */
 .content {
     padding: 0 15px;
@@ -45,8 +46,13 @@ ol, ul {
 /* Navigation Section */
 .top-navigation {
     background-color: #fff;
+    position: fixed;
+    width: 100%;
+    border-bottom: 1px solid #DDD;
+    z-index: 9999;
 }
 .top-navigation > .content {
+    height: 4.375rem;
 
 }
 .top-navigation .logo {
@@ -74,15 +80,14 @@ ol, ul {
 }
 
 /*Intro*/
-
 .introduction {
-    background-image: url('../images/first-background.jpg');
+    background-image: url('../img/first-background.jpg');
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
     height: 45.938rem;
+    overflow: auto;
 }
-
 .introduction h1,
 .introduction h3 {
     color: white;
@@ -90,6 +95,7 @@ ol, ul {
     font-weight: 300;
 }
 .introduction h1 {
+    margin-top: 17.5rem;
     font-size: 3.125rem;
 }
 .introduction h3 {
@@ -98,6 +104,11 @@ ol, ul {
 }
 
 /*Buttons*/
+.introduction .buttons {
+    color: white;
+    text-align: center;
+    margin-top: 1.563rem;
+}
 
 .big-button {
     text-shadow: none;
@@ -105,4 +116,36 @@ ol, ul {
     border-radius: 4px;
     padding: 16px 26px;
     line-height: 1.33;
+}
+
+/*Three Buttons*/
+
+.cases {
+    background-color: #fff;
+    overflow: hidden;
+    padding-bottom: 5rem;
+}
+.cases .content {
+    margin-top: 7.875rem;
+    padding: none;
+    color: #1d1e21;
+    text-align: center;
+}
+.cases h2 {
+    font-size: 2.75rem;
+    margin: 1.625rem 0 3.125rem;
+    font-weight: 300;
+}
+.cases .devices > li {
+    width: 33.3333333%;
+    float:left;
+}
+.cases .devices h3 {
+    font-weight: 400;
+    font-size: 1.563rem;
+    margin: 2.5rem 0px 1.875rem;
+}
+.cases .devices p {
+    font-weight: 300;
+    font-size: 1.313rem;
 }
