--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ ol, ul {
 .footer hr {
     border: 0;
     border-top: 1px solid #eaebec;
-    margin: 1.313rem 0;
+    margin: 1rem;
 }
 .footer .icons > li {
     border-radius: 1.25rem;
